tests/ui/traits/suggest-fully-qualified-closure.stderr
error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-closure.rs:21:7
   |
LL |     q.lol(||());
   |       ^^^
   |
note: multiple `impl`s satisfying `Qqq: MyTrait<_>` found
  --> $DIR/suggest-fully-qualified-closure.rs:12:1
   |
LL | impl MyTrait<u32> for Qqq{
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MyTrait<u64> for Qqq{
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     q.lol(||());
LL +     <Qqq as MyTrait<T>>::lol::<_>(&q, ||());
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
